--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,23 @@
-node_modules/
-dist
-build
-bundle.js
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
 .DS_Store
-*.tgz
-npm-debug.log
-run.log
+.env
 /.idea
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+run.log
+*.tgz
+bundle.js
 Intro.md
+
