--- a/experiments/3/package.json
+++ b/experiments/3/package.json
@@ -8,6 +8,8 @@
     "react-icons": "^2.2.3",
     "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.6.0",
+    "react-redux":"^5.0.4",
+    "redux-thunk": "^2.2.0",
     "redux-devtools-extension": "^2.13.0",
     "styled-components": "^1.4.5"
   },
