--- a/experiments/3/package.json
+++ b/experiments/3/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^15.5.0",
     "react-icons": "^2.2.3",
     "react-redux": "^5.0.4",
+    "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.0",
