--- a/experiments/3/package.json
+++ b/experiments/3/package.json
@@ -17,7 +17,8 @@
   },
   "devDependencies": {
     "babel-preset-stage-0": "^6.24.1",
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "surge": "^0.19.0"
   },
   "scripts": {
     "start": "react-scripts start",
