--- a/experiments/3/package.json
+++ b/experiments/3/package.json
@@ -1,6 +1,6 @@
 {
   "name": "odeum_base",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "react": "^15.5.0",
@@ -15,6 +15,7 @@
     "styled-components": "^1.4.5",
     "styled-normalize": "^1.0.0"
   },
+  "homepage": "",
   "devDependencies": {
     "babel-preset-stage-0": "^6.24.1",
     "react-scripts": "0.9.5",
