--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "bugs": {
     "url": "https://github.com/odeum/odeum-codejs/issues"
   },
-  "homepage": "https://github.com/odeum/odeum-codejs#readme",
+  "homepage": "",
   "dependencies": {
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
