--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
 
 deploy:
   provider: surge
-  project: ./build/
+  project: /home/travis/build/odeum/odeum-codejs/experiments/3/build/
   domain: odeum-codejs-exp3.surge.sh
   skip_cleanup: true
   on:
