--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,11 @@ script:
   - yarn build
   - pwd
   - ls -al
-  - cp -r /home/travis/build/odeum/odeum-codejs/experiments/3/build ./
+  - cp -r /home/travis/build/odeum/odeum-codejs/experiments/3/build ../../
 
 deploy:
   provider: surge
-  project: ./build/
+  project: ./experiments/3/build/
   domain: odeum-codejs-exp3.surge.sh
   skip_cleanup: true
   on:
