--- a/experiments/1/package.json
+++ b/experiments/1/package.json
@@ -19,6 +19,7 @@
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.5",
     "redux": "^3.5.2",
+    "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.1.0"
   },
   "scripts": {
