--- a/experiments/3.1/package.json
+++ b/experiments/3.1/package.json
@@ -7,8 +7,9 @@
     "react-dom": "^15.5.0",
     "react-icons": "^2.2.3",
     "react-redux": "^5.0.4",
+    "react-router": "^3.0.2",
     "react-router-dom": "^4.1.1",
-    "react-router-redux": "^5.0.0-alpha.6",
+    "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.0",
     "redux-thunk": "^2.2.0",
