--- a/experiments/framework/package.json
+++ b/experiments/framework/package.json
@@ -8,10 +8,10 @@
     "react-icons": "^2.2.3",
     "react-redux": "^5.0.4",
     "react-router": "^3.0.2",
-    "react-router-dom": "^4.1.1",
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
-    "redux-devtools-extension": "^2.13.0",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-logger": "^3.0.1",
     "redux-thunk": "^2.2.0",
     "styled-components": "^1.4.5",
     "styled-normalize": "^1.0.0"
