--- a/experiments/framework/package.json
+++ b/experiments/framework/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.1",
   "private": true,
   "dependencies": {
+    "lodash": "^4.17.4",
     "react": "^15.5.0",
     "react-dom": "^15.5.0",
     "react-icons": "^2.2.3",
