--- a/experiments/footerlabel/package.json
+++ b/experiments/footerlabel/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "theme",
+  "name": "footerlabel",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^15.5.3",
-    "react-dom": "^15.5.3",
-    "react-icons": "^2.2.5",
-    "react-scripts": "^0.9.5",
-    "styled-components": "^1.4.4"
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
