--- a/experiments/footerlabel/.gitignore
+++ b/experiments/footerlabel/.gitignore
@@ -2,23 +2,24 @@
 
 # dependencies
 /node_modules
-node_modules
 
 # testing
 /coverage
 
 # production
 /build
-build
 
 # misc
 .DS_Store
-.env
 /.idea
+/.vscode
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 run.log
 *.tgz
-bundle.js
-yarn.lock
