--- a/experiments/framework/.gitignore
+++ b/experiments/framework/.gitignore
@@ -2,7 +2,6 @@
 
 # dependencies
 /node_modules
-/.idea
 
 # testing
 /coverage
@@ -12,9 +11,18 @@
 
 # misc
 .DS_Store
+/.idea
+/.vscode
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+run.log
+*.tgz
+
 # /public/index.html
 
