--- a/experiments/redux-form/package.json
+++ b/experiments/redux-form/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "dependencies": {
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.5",
+    "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-form": "^6.7.0"
   },
   "devDependencies": {
     "react-scripts": "1.0.0"
