Checkpoint - Load Default Tabs

--- a/experiments/framework/src/custom_apps/config.json
+++ b/experiments/framework/src/custom_apps/config.json
@@ -1,8 +1,8 @@
 {
     "scenes": [
-        {
+        {   
             "name": "Dashboard",
-            "location": "/dashboard",
+            "location": "/dashboard/general",
             "icon": "dashboard",
             "tabs": [
                 {
@@ -53,8 +53,8 @@
             "tabs": [
                 {
                     "label": "Forms",
-                    "location": "/forms/forms",
-                    "icon": "generelt",
+                    "location": "/forms",
+                    "icon": "tasks",
                     "fixed": true
                 }
             ]
