--- a/experiments/redux-form/package.json
+++ b/experiments/redux-form/package.json
@@ -8,7 +8,8 @@
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
-    "redux-form": "^6.7.0"
+    "redux-form": "^6.7.0",
+    "styled-components": "^1.4.6"
   },
   "devDependencies": {
     "react-scripts": "1.0.0"
