Minor changes and refactoring - Added ServiceWorker to framework

--- a/experiments/framework_decoupled/src/custom_apps/config.json
+++ b/experiments/framework_decoupled/src/custom_apps/config.json
@@ -28,7 +28,7 @@
                     "icon":"people",
                     "fixed":true
                 },                {
-                    "label":"Operations",
+                    "label":"Actions",
                     "location":"/dashboard/operations",
                     "icon":"code",
                     "fixed":true
