--- a/experiments/framework_decoupled/package.json
+++ b/experiments/framework_decoupled/package.json
@@ -18,10 +18,10 @@
   },
   "homepage": "",
   "devDependencies": {
+    "babel-preset-stage-0": "^6.24.1",
+    "react-scripts": "^1.0.7",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "react-scripts": "0.9.5",
     "surge": "^0.19.0"
   },
   "scripts": {
