Fixes - Part 1 Tabs w/ deeplinking are not done(Coming from outside and going directly to a tab will not announce the tabWrapper)

--- a/experiments/framework_decoupled/src/custom_apps/config.json
+++ b/experiments/framework_decoupled/src/custom_apps/config.json
@@ -29,7 +29,7 @@
                     "fixed":true
                 },                {
                     "label":"Actions",
-                    "location":"/dashboard/operations",
+                    "location":"/dashboard/actions",
                     "icon":"code",
                     "fixed":true
                 },                {
@@ -54,7 +54,7 @@
   {
                     "label": "Simple Form",
                     "location": "/forms/simple",
-                    "icon": "assignment_turned_in",
+                    "icon": "assignment",
                     "fixed": true
                 },
                                                 {
