Change of icon for General and playing sith form styling

--- a/experiments/framework_decoupled/src/custom_apps/config.json
+++ b/experiments/framework_decoupled/src/custom_apps/config.json
@@ -8,7 +8,7 @@
                 {
                     "label": "General",
                     "location": "/dashboard/general",
-                    "icon": "info",
+                    "icon": "assignment_turned_in",
                     "fixed": true
                 },
                 {
