--- a/experiments/framework_decoupled/src/custom_apps/config.json
+++ b/experiments/framework_decoupled/src/custom_apps/config.json
@@ -60,7 +60,7 @@
                                                 {
                     "label": "Dynamic Tab Opener",
                     "location": "/forms/dynamictabopener",
-                    "icon": "info",
+                    "icon": "assignment",
                     "fixed": true
                 }
             ]
