--- a/experiments/theme/package.json
+++ b/experiments/theme/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "polished": "^1.1.3",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
     "react-icons": "^2.2.5",
-    "react-scripts": "^0.9.5",
-    "styled-components": "^1.4.4"
+    "styled-components": "^1.4.5"
   },
   "devDependencies": {
-    "react-scripts": "0.9.5"
+    "react-scripts": "1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
