--- a/experiments/codesplitting/.gitignore
+++ b/experiments/codesplitting/.gitignore
@@ -2,12 +2,19 @@
 
 # dependencies
 /node_modules
+**/node_modules
+node_modules
 
 # testing
 /coverage
 
 # production
 /build
+**/build
+build
+
+# debugging
+/.chrome
 
 # misc
 .DS_Store
@@ -21,5 +28,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+yarn.lock
+package-lock.json
 run.log
 *.tgz
