--- a/experiments/footerlabel/.gitignore
+++ b/experiments/footerlabel/.gitignore
@@ -2,12 +2,16 @@
 
 # dependencies
 /node_modules
+**/node_modules
+node_modules
 
 # testing
 /coverage
 
 # production
 /build
+**/build
+build
 
 # debugging
 /.chrome
@@ -24,5 +28,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+yarn.lock
+package-lock.json
 run.log
 *.tgz
