--- a/experiments/theme/.gitignore
+++ b/experiments/theme/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+**/node_modules
 node_modules
 
 # testing
@@ -9,6 +10,7 @@ node_modules
 
 # production
 /build
+**/build
 build
 
 # debugging
@@ -16,14 +18,17 @@ build
 
 # misc
 .DS_Store
-.env
 /.idea
+/.vscode
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+yarn.lock
+package-lock.json
 run.log
 *.tgz
-bundle.js
-yarn.lock
-
-
