SubTabs system part 1

--- a/experiments/framework_decoupled_v2/package.json
+++ b/experiments/framework_decoupled_v2/package.json
@@ -16,6 +16,7 @@
     "react-router-redux": "^4.0.8",
     "redux": "^3.7.0",
     "redux-form": "^6.8.0",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
     "styled-components": "^2.1.0",
