--- a/experiments/framework_decoupled/package.json
+++ b/experiments/framework_decoupled/package.json
@@ -13,6 +13,7 @@
     "redux": "^3.6.0",
     "redux-form": "^6.7.0",
     "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
     "styled-components": "^1.4.5",
     "styled-normalize": "^1.0.0"
   },
