--- a/experiments/framework_decoupled_v3/src/custom_apps/config.json
+++ b/experiments/framework_decoupled_v3/src/custom_apps/config.json
@@ -71,7 +71,7 @@
         {
             "name": "Forms",
             "id":"forms",
-            "location": "/forms",
+            "location": "/forms/list",
             "icon": "assignment"
         }
     ]
