--- a/experiments/framework_decoupled_v3/package.json
+++ b/experiments/framework_decoupled_v3/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.1",
   "private": true,
   "dependencies": {
+    "immutable": "^3.8.1",
     "lodash": "^4.17.4",
     "react": "^15.5.0",
     "react-dom": "^15.5.0",
@@ -10,6 +11,7 @@
     "react-redux": "^5.0.4",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
+    "react-virtualized": "^9.8.0",
     "redux": "^3.6.0",
     "redux-form": "^6.7.0",
     "redux-thunk": "^2.2.0",
