--- a/experiments/theme/package.json
+++ b/experiments/theme/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "polished": "^1.1.3",
     "react": "^15.5.3",
+    "react-copy-to-clipboard": "^5.0.0",
     "react-dom": "^15.5.3",
     "react-icons": "^2.2.5",
     "styled-components": "^1.4.5"
