--- a/experiments/theme/package.json
+++ b/experiments/theme/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "lodash": "^4.17.4",
     "polished": "^1.1.3",
     "react": "^15.5.3",
     "react-copy-to-clipboard": "^5.0.0",
