--- a/experiments/framework_decoupled_v3/package.json
+++ b/experiments/framework_decoupled_v3/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.1",
   "private": true,
   "dependencies": {
+    "apisauce": "^0.14.0",
     "axios": "^0.16.2",
     "immutable": "^3.8.1",
     "lodash": "^4.17.4",
