--- a/experiments/framework_decoupled_v3/package.json
+++ b/experiments/framework_decoupled_v3/package.json
@@ -5,14 +5,18 @@
   "dependencies": {
     "apisauce": "^0.14.0",
     "axios": "^0.16.2",
+    "draft": "^0.2.3",
+    "draft-js": "^0.10.1",
     "immutable": "^3.8.1",
     "lodash": "^4.17.4",
     "react": "^15.5.0",
     "react-dom": "^15.5.0",
     "react-icons": "^2.2.3",
+    "react-quill": "^1.0.0",
     "react-redux": "^5.0.4",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
+    "react-tinymce": "^0.5.1",
     "react-virtualized": "^9.8.0",
     "redux": "^3.6.0",
     "redux-form": "^6.7.0",
