--- a/experiments/framework_decoupled_v3/package.json
+++ b/experiments/framework_decoupled_v3/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.16.2",
     "draft": "^0.2.3",
     "draft-js": "^0.10.1",
+    "halogen": "^0.2.0",
     "immutable": "^3.8.1",
     "lodash": "^4.17.4",
     "react": "^15.5.0",
@@ -24,7 +25,9 @@
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
     "styled-components": "^1.4.5",
-    "styled-normalize": "^1.0.0"
+    "styled-normalize": "^1.0.0",
+    "react-datepicker": "^0.52.0",
+    "react-modal": "^2.2.2"
   },
   "homepage": "",
   "devDependencies": {
