--- a/experiments/framework_decoupled_v3/package.json
+++ b/experiments/framework_decoupled_v3/package.json
@@ -11,8 +11,11 @@
     "immutable": "^3.8.1",
     "lodash": "^4.17.4",
     "react": "^15.5.0",
+    "react-addons-shallow-compare": "^15.6.0",
+    "react-datepicker": "^0.52.0",
     "react-dom": "^15.5.0",
     "react-icons": "^2.2.3",
+    "react-modal": "^2.2.2",
     "react-quill": "^1.0.0",
     "react-redux": "^5.0.4",
     "react-router": "^3.0.2",
@@ -25,9 +28,7 @@
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
     "styled-components": "^1.4.5",
-    "styled-normalize": "^1.0.0",
-    "react-datepicker": "^0.52.0",
-    "react-modal": "^2.2.2"
+    "styled-normalize": "^1.0.0"
   },
   "homepage": "",
   "devDependencies": {
