Included Tabs on Appendix

--- a/experiments/framework_decoupled_v3/src/app/config.json
+++ b/experiments/framework_decoupled_v3/src/app/config.json
@@ -71,6 +71,12 @@
                     "fixed": true
                 }
             ]
+        },
+        {
+            "id": "appendix",
+            "activeTab":"Tillaegs tekst",
+            "tabs":[
+            ]
         }
     ],
     "scenes": [
