--- a/experiments/framework_decoupled_v3/package.json
+++ b/experiments/framework_decoupled_v3/package.json
@@ -21,6 +21,7 @@
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
     "react-rte": "^0.11.0",
+    "react-select": "^1.0.0-rc.5",
     "react-tinymce": "^0.5.1",
     "react-virtualized": "^9.8.0",
     "redux": "^3.6.0",
