--- a/experiments/framework_decoupled_v3/package.json
+++ b/experiments/framework_decoupled_v3/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^15.5.0",
     "react-icons": "^2.2.3",
     "react-modal": "^2.2.2",
+    "react-pdf-js": "^2.0.1",
     "react-quill": "^1.0.0",
     "react-redux": "^5.0.4",
     "react-router": "^3.0.2",
