--- a/experiments/framework_decoupled_v3/package.json
+++ b/experiments/framework_decoupled_v3/package.json
@@ -37,7 +37,7 @@
   "homepage": "",
   "devDependencies": {
     "babel-preset-stage-0": "^6.24.1",
-    "react-scripts": "^1.0.7",
+    "react-scripts": "1.0.11",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.1",
     "surge": "^0.19.0"
