--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
         "constructor-super": "warn",
         "valid-typeof": "warn",
         "semi": ["error", "never"],
+        "indent": ["error", "tab"],
 
         "react/display-name": 0
     },
