--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,22 +20,16 @@
         "constructor-super": "warn",
         "valid-typeof": "warn",
         "semi": ["error", "never"],
-        "indent": ["error", "tab"],
-        "comma-spacing": ["error",
-            {
-                "before": false,
-                "after": true
-            }
-        ],
-        "object-curly-spacing": [
-            "error",
-            "always"
-        ],
-
+        "indent": ["error", "tab", {"SwitchCase": 1}],
+        "comma-spacing": ["error", {"before": false, "after": true}],
+        "keyword-spacing": ["error", {"before": true, "after": true}],
+        "key-spacing": ["error", {"beforeColon": false, "afterColon": true}],
+        "object-curly-spacing": ["error", "always"],
+        "space-infix-ops": "error",
+        "arrow-spacing": "error",
         "react/display-name": 0
     },
        "extends": [
         "react-app"
     ]
 }
-
