--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
         "key-spacing": ["error", {"beforeColon": false, "afterColon": true}],
         "object-curly-spacing": ["error", "always"],
         "space-infix-ops": "error",
+        "space-before-blocks": "error",
         "arrow-spacing": "error",
         "react/display-name": 0
     },
