--- a/experiments/framework_decoupled_v3/package.json
+++ b/experiments/framework_decoupled_v3/package.json
@@ -11,6 +11,7 @@
     "halogen": "^0.2.0",
     "immutable": "^3.8.1",
     "lodash": "^4.17.4",
+    "normalize.css": "^7.0.0",
     "polished": "^1.4.0",
     "react": "^15.5.0",
     "react-addons-shallow-compare": "^15.6.0",
