--- a/docs/developer/vscode-settings.json
+++ b/docs/developer/vscode-settings.json
@@ -1,58 +1,77 @@
 // Place your settings in this file to overwrite the default settings
 {
-    "terminal.integrated.shell.osx": "fish",
-    "editor.fontSize": 14,
-    "window.zoomLevel": 0,
-    "window.reopenFolders": "all",
-    "window.newWindowDimensions": "maximized",
-    "terminal.integrated.rightClickCopyPaste": false,
-    "terminal.integrated.fontSize": 13,
-    "terminal.integrated.cursorBlinking": true,
-    "terminal.integrated.cursorStyle": "line",
-    "files.autoSave": "off",
-    "files.associations": {
-        "*.thor": "ruby",
-        "*.jsx": "javascriptreact",
-        "*.js": "javascript",
-        "**/src/**/*.js": "javascriptreact",
+	"terminal.integrated.shell.osx": "fish",
+	"editor.fontSize": 15,
+	"window.zoomLevel": 0,
+	"window.reopenFolders": "all",
+	"window.newWindowDimensions": "maximized",
+	"terminal.integrated.rightClickCopyPaste": false,
+	"terminal.integrated.fontSize": 13,
+	"terminal.integrated.cursorBlinking": true,
+	"terminal.integrated.cursorStyle": "line",
+	"files.autoSave": "off",
+	"files.associations": {
+		"*.thor": "ruby",
+		"*.jsx": "javascriptreact",
+		"*.js": "javascriptreact",
+		"**/src/**/*.js": "javascriptreact",
 		"**/node_modules/**/*.js": "javascript"
-
-    },
-    "vsicons.projectDetection.disableDetect": true,
-    "workbench.iconTheme": "vscode-icons",
-    "workbench.welcome.enabled": false,
-    "terminal.integrated.fontFamily": "Menlo",
-    "workbench.colorTheme": "Atom One Dark",
-    "git.confirmSync": false,
-    "todohighlight.isEnable": true,
-    "window.nativeTabs": true,
-    "eslint.validate": [
-        "javascript",
-        "javascriptreact"
-    ],
-    "files.exclude": {
-        "**/.git": true,
-        "**/.svn": true,
-        "**/.hg": true,
-        "**/CVS": true,
-        "**/.DS_Store": true
-    },
-    "prettier.tabWidth": 4,
-    "prettier.trailingComma": "es5",
-    "prettier.semi": false,
-    "prettier.singleQuote": true,
-    "editor.detectIndentation": false,
-    "explorer.openEditors.visible": 0,
-    "search.exclude": {
-        "**/node_modules": true,
-        "**/bower_components": true,
-        "**/.map": true,
-        "**/.chunk.js": true
-    },
-    "debug.allowBreakpointsEverywhere": true,
-    "debug.inlineValues": true,
-    "terminal.external.osxExec": "fish",
-    "gitHistory.displayDescription": "CB:",
-    "npm-intellisense.packageSubfoldersIntellisense": true,
-    "npm-intellisense.showBuildInLibs": true
+	},
+	"vsicons.projectDetection.disableDetect": true,
+	"workbench.welcome.enabled": false,
+	"terminal.integrated.fontFamily": "Menlo",
+	"git.confirmSync": false,
+	"todohighlight.isEnable": true,
+	"window.nativeTabs": true,
+	"eslint.validate": [
+		"javascript",
+		"javascriptreact"
+	],
+	"files.exclude": {
+		"**/.git": true,
+		"**/.svn": true,
+		"**/.hg": true,
+		"**/CVS": true,
+		"**/.DS_Store": true
+	},
+	"editor.detectIndentation": false,
+	"explorer.openEditors.visible": 0,
+	"search.exclude": {
+		"**/node_modules": true,
+		"**/bower_components": true,
+		"**/.map": true,
+		"**/.chunk.js": true
+	},
+	"debug.allowBreakpointsEverywhere": true,
+	"debug.inlineValues": true,
+	"terminal.external.osxExec": "fish",
+	"gitHistory.displayDescription": "CB:",
+	"npm-intellisense.packageSubfoldersIntellisense": true,
+	"npm-intellisense.showBuildInLibs": true,
+	"editor.renderControlCharacters": true,
+	"editor.renderWhitespace": "none",
+	"stylelint.enable": true,
+	"css.validate": false,
+	"scss.validate": false,
+	"git.enableSmartCommit": true,
+	"[javascriptreact]": {},
+	"editor.fontFamily": "Monaco, monospace, 'Courier New', Menlo",
+	"workbench.iconTheme": "vscode-icons",
+	"workbench.colorTheme": "One Dark Pro",
+	"workbench.activityBar.visible": true,
+	"sync.gist": "9374075cbebf652d507fcc64e7a86c02",
+	"sync.lastUpload": "2017-07-01T01:57:47.647Z",
+	"sync.autoDownload": false,
+	"sync.autoUpload": false,
+	"sync.lastDownload": "",
+	"sync.forceDownload": false,
+	"sync.anonymousGist": false,
+	"sync.host": "",
+	"sync.pathPrefix": "",
+	"sync.quietSync": false,
+	"extensions.autoUpdate": false,
+	"atomKeymap.promptV3Features": true,
+	"editor.multiCursorModifier": "ctrlCmd",
+	"editor.formatOnPaste": true,
+	"editor.insertSpaces": false
 }
