--- a/experiments/framework_clean/src/app/config.json
+++ b/experiments/framework_clean/src/app/config.json
@@ -9,7 +9,14 @@
 					"location": "/dashboard/general",
 					"icon": "assignment_turned_in",
 					"fixed": true
-				}
+				},
+				{
+					"id":1,
+				"label":"Cake",
+				"location":"/dashboard/cake",
+				"icon":"info",
+				"fixed":true
+							}
 			]
 		}
 	],
