Users Async Data Retrieval

--- a/experiments/framework_clean/src/app/config.json
+++ b/experiments/framework_clean/src/app/config.json
@@ -16,6 +16,12 @@
 				"location":"/dashboard/cake",
 				"icon":"info",
 				"fixed":true
+							},
+							{
+							"label":"Users",
+							"location":"/dashboard/users",
+							"icon":"info",
+							"fixed":true
 							}
 			]
 		},
