--- a/experiments/theme/package.json
+++ b/experiments/theme/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "dependencies": {
     "lodash": "^4.17.4",
-    "polished": "^1.1.3",
-    "react": "^15.5.3",
+    "polished": "^1.4.1",
+    "react": "^15.6.1",
     "react-copy-to-clipboard": "^5.0.0",
-    "react-dom": "^15.5.3",
+    "react-dom": "^15.6.1",
     "react-icons": "^2.2.5",
-    "styled-components": "^1.4.5"
+    "styled-components": "^2.1.2"
   },
   "devDependencies": {
-    "react-scripts": "1.0.7"
+    "react-scripts": "^1.0.11"
   },
   "scripts": {
     "start": "react-scripts start",
