--- a/experiments/framework_decoupled_v3/package.json
+++ b/experiments/framework_decoupled_v3/package.json
@@ -17,6 +17,7 @@
     "react-addons-shallow-compare": "^15.6.0",
     "react-datepicker": "^0.53.0",
     "react-dom": "^15.5.0",
+    "react-file-download": "^0.3.4",
     "react-icons": "^2.2.3",
     "react-modal": "^2.2.4",
     "react-pdf-js": "^2.0.3",
