Editing standard naming and text + play with logo

--- a/experiments/framework_decoupled_v3/public/manifest.json
+++ b/experiments/framework_decoupled_v3/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Framework",
-  "name": "ODEUM codeJS Framework - decoupled",
+  "short_name": "ODEUMEplan",
+  "name": "ODEUM ePlan",
   "icons": [
     {
       "src": "favicon.ico",
